<resources>
    <string name="app_name">Sterix Mobile</string>

    <string name="credentials">Enter your credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ip">IP Address</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>

    <string name="waiting_in_vain">Syncing with server. Please wait.</string>


    <string name="service_orders">Service Orders</string>

    <string name="next">Next Screen</string>

    <string name="title_activity_tasks">Tasks</string>

    <string name="title_activity_acknowledgement">Client\'s Acknowledgement</string>
    <string name="ack_1">Start monitoring</string>
    <string name="ack_2">Start chemical treatment at outer perimeter</string>
    <string name="ack_3">Reschedule task due to the following reasons...</string>
    <string name="ack_4">Cancel chemical treatment at production area due to production</string>
    <string name="by_entering">By entering my username and password, I\'m acknowledging the selected actions of the Sterix Technician</string>

    <string name="monitoring">Monitoring Summary</string>
    <string name="treatment">Treatment</string>

    <string name="area_monitoring">Area Monitoring</string>
    <string name="send_alert">Send Alert</string>
    <string name="add_findings">Add Findings</string>
    <string name="view_findings">View Findings</string>
    <string name="area_findings">Structural and/or Sanitation Finding/s or Deviation/s</string>
    <string name="area_actions">Sterix\'s Immediate action/s and Recommendations </string>
    <string name="add_photo">Add Photo</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add Notes</string>
    <string name="pests_found">Pests found</string>
    <string name="ptl">PTL</string>

    <string name="ant">Ant:</string>
    <string name="ar">AR:</string>
    <string name="mos">Mos:</string>
    <string name="df">DF:</string>
    <string name="nr">NR:</string>
    <string name="liz">Liz:</string>
    <string name="gr">GR:</string>
    <string name="hf">HF:</string>
    <string name="bf">BF:</string>
    <string name="cb">CB:</string>
    <string name="sp">Sp:</string>
    <string name="ff">FF:</string>
    <string name="rr">RR:</string>
    <string name="bi">Bi:</string>
    <string name="fm">FM:</string>
    <string name="hm">HM:</string>
    <string name="oth">Oth:</string>
    <string name="pf">PF:</string>
    <string name="rfb">RFB:</string>

    <string name="device_monitoring">Device Monitoring</string>
    <string name="no_device">No Device Detected.</string>
    <string name="photos_notes">View Photos &amp; Notes</string>
    <string name="view_device_summary">View Device Summary</string>
    <string name="save_next_device">Save and go to Next Device</string>

    <string name="scan">Scan Device</string>
    <string name="add_photo_notes">Add Photo or Notes</string>
    <string name="condition">Device Condition</string>
    <string name="action">Action</string>

    <string name="device_summary">Device Summary</string>
    <string name="device_monitoring_back">Back to Device Monitoring</string>


</resources>
